css/style.css
/* ... */
/* Header Only */
.site-header {
    background-color: transparent;
    /* border-bottom: 0px solid #ccc; */
    padding: 0.5em 5%;
    justify-content: space-between;
}
.site-header.on-top {
    position: absolute;
    width: 100%;
}
@media (min-width: 768px) {
    .site-header {
        display: flex;
        justify-content: space-between;
        padding-top: 0.75em;
    }
}

/* Site ID */
.site-id {
    text-align: center;
    
}
.site-id h1 {
    font-size: 1.5em;
    font-weight: normal;
    font-style: normal;
    margin: 0;
    color: #999;
}
.site-id h1 a {
    font-weight: bold;
    display: inline-block;
    color: var(--blue)
}

/* Footer Only */
.site-footer {
    background-color: var(--blue);
    border-top: 0px solid #ccc;
    padding-top: 3em;
    padding-bottom: 1.5em;
    text-align: center;
    /* background-image: url(../img/footer-deco.jpg); */
    background-position: 50% 100%;
    background-repeat: no-repeat;
    .container {
        padding-top: 0.25em;
        padding-bottom: 0.25em;
        @media (min-width: 768px) {
            display: flex;
            justify-content: center;
            padding-bottom: 0.5em;
        }
    }
    h3 {
        display: flex;
        justify-content: center;
        align-items: center;
        margin: 0;
    }
    .no-deco {
        margin: 0;
        ul {
            margin-top: 0;
            padding-top: 5px;
            @media (min-width: 768px) { 
                text-align: left;
            }
        }
    }
    /* -90deg rotate */
    .rotate-vert-n{
        
        @media (min-width: 768px) {
            writing-mode: sideways-lr;
            align-content: end;
            margin-top: 0;
            h5 {
            font-size: 15px;
            }    
        }
    }
    .link-icons {
        margin-top: 1em;
        display: flex;
        position: relative;
        justify-content: center;
        .mail svg:hover {
            color: rgba(183, 88, 88, 1);
            
            
        }
    }
    .site-footer-nav {
        ul {
            list-style: none;
            margin: 0;
            padding-left: 0;
            padding-top: 5px;      
        }
    }
    .footer-logo {
        a img{
            height: 65px;
            width: auto;
            object-fit: cover;
            margin: auto;
        }
    }
}
/* MOBILE FOOTER */
@media (max-width: 768px) {
    .site-footer .row {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 1.5em;
        flex-wrap: wrap;
        justify-content: space-between;
        gap: 0;
        .site-footer-nav {
            padding-bottom: 1em;
        }
        .link-icons {
            margin: 0;
            padding-bottom: 1em;
        }
        h5 {
            margin: 0;
            font-size: 1.125em;
            text-decoration-line: underline;
        }
    }
    .site-footer .column {
        width: 100%;
        text-align: center;
        margin: 0 auto;
    }
}

/* Main Site Section (Main Content Area) */
.site-main {
    background: var(--blue);
    h1 {
        display: flex;
        align-items: center;
        justify-content: center;
    }
    padding-bottom: 3em;
}

/* Main Section */
section {
    padding: 1.5em 0;
}

/* Hero Section */
.container .hero {
    position: relative;
    text-align: center;
}

.hero {
    border-top: none;
    min-height: 100svh;
    display: grid;
    place-items: center;
    padding: 10svh 1em;
    background-size: cover;
    background-position: center bottom;
}
.hero .hero-name-rect {
    
    @media (min-width: 768px) {
        background-image: url(../img/hero_rect.png);
        background-repeat: no-repeat;
        background-size: contain;
        margin-top: 3em;
        padding: 2em 0 1em 2.5em;
        height: 15em;
    }
    @media (max-width: 768px) {
        margin-top: 3em;
    }
}
.hero .hero-lam-logo {
    align-items: center;
    padding-top: 2em;
    display: inline-block;
    max-width: 60%;
    img {
        width: 100%;
    }
}
.hero .hero-buttons {
    align-items: center;
    text-align: center;
    @media (max-width:768px) {
        display: flex;
        p {
            padding: 0 1em 0 0;
        }
        
    }
    @media (min-width: 768px) {
        padding-top: 5em;
    }
    
}
.hero h4 {
    color: var(--pink-dark);
    margin-top: .75em;
    margin-bottom: 0;
    font-family: museo-sans, sans-serif;
    font-weight: 300;
    font-style: normal
}
.hero .h1-left{
    @media (min-width: 768px) {
        font-size: 7em;
        min-width: 7em;
        justify-content: left;
    }
    align-items: normal;
    margin: 0;
    margin-bottom: 10px;
    color: var(--black);

}
.hero h1 {
    font-style: 3em;
    line-height: 1.1em;
    max-width: 20em;
    margin-bottom: 10px;
}
/* .hero p {
    max-width: 960px;
    display: flex;
    align-items: center;
    justify-content: center;
    a.button {
        margin: 5px;
    }
} */
.hero.text-centered h1, .hero.text-centered h2, .hero.text-centered h3, .hero.text-centered h4, .hero.text-centered h5, .hero.text-centered h6, .hero.text-centered p {
    margin-left: auto;
    margin-right: auto;
}

.hero.full-width {
    margin-top: 0;
    margin-bottom: 0;
}

/* Swap the display order of two columns */
.orderswap {
    flex-direction: row-reverse;
}

/* OLD/LEGACY SUPPORT FOR PRE-FLEXBOX ORDERSWAP */
/* OLD VERTICAL CENTERING MARKUP PRE-FLEXBOX */
.vert-parent .column {
    display: flex;
    align-items: center;
}

/* #SITE NAVIGATION */
/* Default Site Navigation Menu (both header & footer) */
.site-navigation {
    font-family: museo-sans, sans-serif;
    font-weight: 300;
    font-style: normal;
    button {
        font-family: museo-sans, sans-serif;
        font-weight: 300;
        font-style: normal;
    }
}
.site-navigation .menu-button {
    display: none;
}
.site-navigation ul {
    margin: 0;
    padding: 0.5em 0;
    text-align: center;
}
/* ... */

